Complete the feature for #864, ability to move around resources

--- a/resource/organize.html
+++ b/resource/organize.html
@@ -29,7 +29,7 @@ translate("Display related passages")</p>
 </h3>
 <p>translate("As an administrator, you can organize default resources for your team.")</p>
 <br>
-<div id="list" class="slippylist">
+<div id="list-def" class="slippylist">
 ##defactivesblock##
 </div>
 <br>
