Update and fix for #864

--- a/resource/organize.html
+++ b/resource/organize.html
@@ -7,8 +7,13 @@
 <br>
 <!-- #BEGINZONE defaultresources -->
 <p>translate("There are a default selection of resources that your administrator has compiled.")</p>
-<p><a href="?applydefaultresources">translate("Apply these selection to your selection of resources?")</a><span class="tooltip"></span>
+<p>
+  <a href="?applydefaultresources">translate("Replace your selected resources with the default selection of resources?")</a><span class="tooltip"></span>
 <span class="tooltip-text">translate("WARNING! This will rewrite your selection of resources.")</span>
+</p>
+<p>
+  <a href="?adddefaultresources">translate("Add the default selection of resources to your selected resources?")</a><span class="tooltip"></span>
+<span class="tooltip-text">translate("This will add the default selection of resources to below your bottom-most selected resource.")</span>
 </p>
 <br>
 <!-- #ENDZONE defaultresources -->
