Clarify messages for Default Resource Organizer and disable the option on client devices, #890

--- a/resource/organize.html
+++ b/resource/organize.html
@@ -12,7 +12,7 @@
 <p><a href="select?page=view">➕</a></p>
 <br>
 <!-- #BEGINZONE defaultresources -->
-<p>translate("Your administrator has already given you a selection of resources. Would you like to:")</p>
+<p>translate("The administrator has defined a selection of resources. Would you like to:")</p>
 <p>
   <a href="?applydefaultresources">translate("Replace your current resource selection with the admin's selection.")</a><span class="tooltip"></span>
 <span class="tooltip-text">translate("WARNING! This will erase your current selection and give you the default selection.")</span>
@@ -32,6 +32,7 @@ translate("Display related passages")</p>
 <!-- #ENDZONE client -->
 <br>
 <!-- #BEGINZONE defaultresourceorganizer -->
+<!-- #BEGINZONE cloud -->
 <h3>translate("Default Resource Organizer")<span class="tooltip"></span>
 <span class="tooltip-text">translate("You can reorder the resources below by holding, then dragging and dropping.")</span>
 </h3>
@@ -43,6 +44,7 @@ translate("Display related passages")</p>
 <br>
 <p><a href="select?page=view&type=def">➕</a></p>
 <br>
+<!-- #ENDZONE cloud -->
 <!-- #ENDZONE defaultresourceorganizer -->
 <script type="text/javascript" src="../assets/checkbox.js?##VERSION##"></script>
 <script type="text/javascript" src="../slip/slip.js"></script>
