If the secure webserver is not running in Bibledit Cloud, then it never automatically forwards from plain http to the secure https, even if this automatic forwarding setting is on
https://github.com/bibledit/cloud/issues/866

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.996: If the secure webserver is not running in Bibledit Cloud, then it never automatically forwards from plain http to the secure https, even if this automatic forwarding setting is on.</p>
 <p>5.0.994: Being able to set a stylesheet for a Bible is now a privilege that can be assigned to roles lower than a manager.</p>
 <p>5.0.993: Displays the Easy English Bible Commentary lots better.</p>
 <p>5.0.992: Embedded libtidy fixes crash in the system-provided libtidy.</p>
