Can display the OSIS tags, like Strong's numbers, in the SWORD resources
https://github.com/bibledit/cloud/issues/872

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.1.002: Can display the OSIS tags, like Strong's numbers, in the SWORD resources.</p>
 <p>5.1.002: Support for the new Studylight website so it displays the Studylight resources again.</p>
 <p>5.0.997: Fixed: The French user interface gives Javascript errors in the Bible editors.</p>
 <p>5.0.996: If the secure webserver is not running in Bibledit Cloud, then it never automatically forwards from plain http to the secure https, even if this automatic forwarding setting is on.</p>
