--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.1.003: Marks USFM table cells with a vertical bar in the Bible editors.</p>
 <p>5.1.002: Can display the OSIS tags, like Strong's numbers, in the SWORD resources.</p>
 <p>5.1.002: Support for the new Studylight website so it displays the Studylight resources again.</p>
 <p>5.0.997: Fixed: The French user interface gives Javascript errors in the Bible editors.</p>
