--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.1.007: Outputs the chapter number also for one-chapter books.</p>
 <p>5.1.006: The start of a line of poetry no longer overlaps a chapter number in drop caps in web export.</p>
 <p>5.1.003: Marks USFM table cells with a vertical bar in the Bible editors.</p>
 <p>5.1.002: Can display the OSIS tags, like Strong's numbers, in the SWORD resources.</p>
