--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,8 @@
 <h1>ChangeLog</h1>
 
+<p>5.1.009: Support for USFM marker \sup for superscript text.</p>
+<p>5.1.009: Downloading exports in the Windows app works again.</p>
+<p>5.1.009: Finding text in the Windows app user interface works again.</p>
 <p>5.1.007: Outputs a blank line for the \b style for Web export.</p>
 <p>5.1.007: Outputs the chapter number also for one-chapter books.</p>
 <p>5.1.006: The start of a line of poetry no longer overlaps a chapter number in drop caps in web export.</p>
