Clarify presetting admin details
https://github.com/bibledit/cloud/issues/924

--- a/help/config.html
+++ b/help/config.html
@@ -168,6 +168,9 @@ To preset the administrator's account,
 put the following three files in the "config" folder.
 The files "admin-username" and "admin-password" and "admin-email".
 Store one detail in each file.
+Then remove file "installed-interface-version" from folder "databases/config/general".
+Lastly restart Bibledit-Cloud.
+Now the admin credentials will take effect, and you can login using those.
 </p>
 
 <h3>Demo</h3>
