--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.1.010: The macOS app now uses the newer WebKit View.</p>
 <p>5.1.010: Can remove a Bible with trailing spaces in its name.</p>
 <p>5.1.010: Support for USFM marker \sup for superscript text.</p>
 <p>5.1.009: Downloading exports in the Windows app works again.</p>
