Setting to turn on/off ability to create accounts.
https://github.com/bibledit/cloud/issues/929

--- a/help/config.html
+++ b/help/config.html
@@ -173,6 +173,13 @@ Lastly restart Bibledit-Cloud.
 Now the admin credentials will take effect, and you can login using those.
 </p>
 
+<h3>Account creation</h3>
+<p>
+Normally anyone can create an account on Bibledit-Cloud.
+If this is not desired, tnen put a file called "create-no-accounts" in the "config" folder.
+Now creation of accounts is no longer possible, and public feedback is no longer possible.
+</p>
+
 <h3>Demo</h3>
 <p>
 If the file "demo" is in the "config" folder,
