--- a/session/login.html
+++ b/session/login.html
@@ -34,7 +34,9 @@ translate ("Username:")
 
 <!-- #BEGINZONE local -->
 <p><a href="password">translate ("Forgot password?")</a></p>
-<p>translate ("Not registered?") <a href="signup">translate ("Sign up!")</a></p>
+<!-- #BEGINZONE create_accounts -->
+<p>translate ("Not registered?") <a href="signup">translate ("Sign up!")</a></p> Todo
+<!-- #ENDZONE create_accounts -->
 <!-- #ENDZONE local -->
 </form>
 </div>
