--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,7 @@
 <h1>ChangeLog</h1>
 
+<p>5.1.011: Put file "create-no-accounts" in the "config" folder to disable user account creation in Bibledit Cloud.</p>
+<p>5.1.010: The macOS app is now written in Swift.</p>
 <p>5.1.010: The macOS app now uses the newer WebKit View.</p>
 <p>5.1.010: Can remove a Bible with trailing spaces in its name.</p>
 <p>5.1.010: Support for USFM marker \sup for superscript text.</p>
