Modernize code and clean up
https://github.com/bibledit/cloud/issues/922

--- a/session/login.html
+++ b/session/login.html
@@ -35,7 +35,7 @@ translate ("Username:")
 <!-- #BEGINZONE local -->
 <p><a href="password">translate ("Forgot password?")</a></p>
 <!-- #BEGINZONE create_accounts -->
-<p>translate ("Not registered?") <a href="signup">translate ("Sign up!")</a></p> Todo
+<p>translate ("Not registered?") <a href="signup">translate ("Sign up!")</a></p>
 <!-- #ENDZONE create_accounts -->
 <!-- #ENDZONE local -->
 </form>
