--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.1.012: Bibledit for macOS again can print a page.</p>
 <p>5.1.012: Log the remote IP address that causes TLS errors.</p>
 <p>5.1.012: Localize the recently used styles.</p>
 <p>5.1.011: Put file "create-no-accounts" in the "config" folder to disable user account creation in Bibledit Cloud.</p>
