--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,7 @@
 <h1>ChangeLog</h1>
 
+<p>5.1.012: Bibledit for macOS again can open a file from a page.</p>
+<p>5.1.012: Bibledit for macOS again can search text on a page.</p>
 <p>5.1.012: Bibledit for macOS again can print a page.</p>
 <p>5.1.012: Log the remote IP address that causes TLS errors.</p>
 <p>5.1.012: Localize the recently used styles.</p>
