--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.1.016: Client upgrade to MbedTLS 3.6.</p>
 <p>5.1.013: Can enable or disable spell check in Bible editors.</p>
 <p>5.1.013: Fix broken Javascript in rare cases, fixing a broken verse editor.</p>
 <p>5.1.012: Logs the correct client IP address instead of 0.0.0.0.</p>
