--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.1.017: Submit Bible to the Bible Dropbox manually only.</p>
 <p>5.1.016: Upgrade to MbedTLS 3.6.</p>
 <p>5.1.013: Can enable or disable spell check in Bible editors.</p>
 <p>5.1.013: Fix broken Javascript in rare cases, fixing a broken verse editor.</p>
