Switch Windows to std::filesystem
https://github.com/bibledit/cloud/issues/952

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.1.018: Bibledit for Windows is built through Visual Studio 2022 on Windows 11.</p>
 <p>5.1.017: Submit Bible to the Bible Dropbox manually only.</p>
 <p>5.1.016: Upgrade to MbedTLS 3.6.</p>
 <p>5.1.013: Can enable or disable spell check in Bible editors.</p>
