--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.1.019: No more send/receive lockups due to plenty of emails to be sent off.</p>
 <p>5.1.019: Cloud logs and removes a consultation note without a passage.</p>
 <p>5.1.019: Disable std::filesystem on Cloud and Linux because of erratic behaviour.</p>
 <p>5.1.018: Bibledit for Windows is built through Visual Studio 2022 on Windows 11.</p>
