Reorganize help files ...
... with regard to installing Bibledit Cloud from packages.

--- a/help/installation.html
+++ b/help/installation.html
@@ -28,7 +28,7 @@ translate("The changes made in this way can be synchronized with Bibledit Cloud 
 <p><a href="installlinux">translate("Bibledit on Linux")</a></p>
 <p><a href="installios">translate("Bibledit on iOS")</a></p>
 <p><a href="installchromeos">translate("Bibledit on Chrome OS")</a></p>
-<p><a href="installcloudubuntu">translate("Bibledit Cloud on Ubuntu")</a></p>
+<p><a href="installcloudlinux">translate("Bibledit Cloud on Linux")</a></p>
 <p><a href="installcloudcentos">translate("Bibledit Cloud on CentOS")</a></p>
 
 <h2>translate("Upgrading")</h2>
