Reorganize Cloud install info
A new section was created that encompasses installing Bibledit Cloud on multiple Linux servers.

--- a/help/installcloudpackages.html
+++ b/help/installcloudpackages.html
@@ -1,4 +1,4 @@
-<h2>translate("Install Bibledit Cloud from its package")</h2>
+<h2>translate("Install Bibledit Cloud from a package")</h2>
 
 <p>translate("Follow the steps below to install Bibledit Cloud.")</p>
 <br>
@@ -18,11 +18,17 @@
     <td>translate("Install most recent version of Bibledit.")</td>
   </tr>
   <tr>
+    <td><br></td>
+  </tr>
+  <tr>
     <td>1.</td>
     <td>translate("Open a terminal.")</td>
     <td></td>
     <td></td>
     <td></td>
+  </tr>
+  <tr>
+    <td><br></td>
   </tr>
   <tr>
     <td>2.</td>
@@ -32,6 +38,9 @@
     <td><code>sudo apt install software-properties-common</code></td>
   </tr>
   <tr>
+    <td><br></td>
+  </tr>
+  <tr>
     <td>3.</td>
     <td>translate("Add the Bibledit repository:")</td>
     <td>--</td>
@@ -39,11 +48,17 @@
     <td><code>sudo add-apt-repository ppa:bibledit/ppa</code></td>
   </tr>
   <tr>
+    <td><br></td>
+  </tr>
+  <tr>
     <td>4.</td>
     <td>translate("Read the repository:")</td>
     <td><code>sudo apt update</code></td>
     <td><code>sudo apt update</code></td>
     <td><code>sudo apt update</code></td>
+  </tr>
+  <tr>
+    <td><br></td>
   </tr>
   <tr>
     <td>5.</td>
