--- a/help/installcloudsource.html
+++ b/help/installcloudsource.html
@@ -62,8 +62,7 @@
 <br>
 
 <p>
-➤ translate("Download a recent version of Bibledit from")
-<a href="https://github.com/bibledit/cloud/releases">GitHub</a>.
+➤ <a href="https://github.com/bibledit/cloud/releases">translate("Download a recent version of Bibledit.")</a>
 </p>
 
 <br>
