--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.1.021: Displays Hebrew cantillation and vowels, Greek accents, Arabic vowels and shaping, in the SWORD resources.</p>
 <p>5.1.021: Fixed: Fails to navigate through exports on Windows.</p>
 <p>5.1.020: Bibledit for Windows moved from the CEF Sharp to the Microsoft Webview2 embedded web browser.</p>
 <p>5.1.020: Fix NET Bible error "You have been blocked".</p>
