Support change notifications for Bibles with one or more dots in their name
The separator marker for Bibles and book and chapter is a dot ("."). Hence before this commit was made, this led to a rejection of this change notification for this Bible.
After the fix, change notificatons for such cases come through and work as expected.
https://github.com/bibledit/cloud/issues/968

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.1.021: Support change notifications for Bibles with one or more dots in their name.</p>
 <p>5.1.021: Bibledit for iOS is now written in Swift.</p>
 <p>5.1.021: Displays Hebrew cantillation and vowels, Greek accents, Arabic vowels and shaping, in the SWORD resources.</p>
 <p>5.1.021: Fixed: Fails to navigate through exports on Windows.</p>
