--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.1.021: Support importing multiple files in one go into a Bible.</p>
 <p>5.1.021: Support change notifications for Bibles with one or more dots in their name.</p>
 <p>5.1.021: Bibledit for iOS is now written in Swift.</p>
 <p>5.1.021: Displays Hebrew cantillation and vowels, Greek accents, Arabic vowels and shaping, in the SWORD resources.</p>
